# notorch

./: .gitignore  LICENSE  README.md  pyproject.toml  scratch.ipynb
mol_gnn/: __main__.py  conf.py  exceptions.py  factory.py  schedulers.py  types.py
mol_gnn/cli/: __main__.py  main.py  train.py
mol_gnn/cli/utils/: instantiate.py  resolvers.py
mol_gnn/data/: __init__.py  batch.py  collate.py  dataset.py  managers.py  mixins.py  molecule.py  multi.py  reaction.py  samplers.py
mol_gnn/data/database/: base.py  hdf5.py  npz.py  sdf.py
mol_gnn/data/datasets/: _molecule.py  mixins.py  mol  molecule.py  multi.py  reaction.py
mol_gnn/data/models/: batch.py  datum.py  graph.py  sample.py
mol_gnn/databases/: base.py  hdf5.py  np.py  npz.py  sdf.py
mol_gnn/featurizers/: __init__.py  atom.py  base.py  bond.py  molecule.py
mol_gnn/featurizers/graph/: __init__.py  base.py  graph.py  mixins.py  molecule.py  reaction.py  utils.py
mol_gnn/featurizers/molgraph/: __init__.py  base.py  mixins.py  molecule.py  molgraph.py  reaction.py
mol_gnn/featurizers/vector/: __init__.py  atom.py  base.py  bond.py  molecule.py
mol_gnn/lightning_models/: __init__.py  model.py  mpnn.py  mpnn_.py  multi.py
mol_gnn/models/: __init__.py  model.py  mpnn.py  multi.py
mol_gnn/nn/: __init__.py  _loss.py  affine.py  agg.py  encoder.py  ffn.py  layers.py  loss.py  metrics.py  mlp.py  ops.py  permute.py  predictors.py  residual.py  transforms.py
mol_gnn/nn/gnn/: agg.py  attention.py  base.py  chemprop.py  embed.py
mol_gnn/nn/gnn/_old/: agg.py  edge.py  embed.py  impl.py  message.py  multi.py  node.py  update.py
mol_gnn/nn/message_passing/: __init__.py  agg.py  attention.py  base.py  chemprop.py  edge.py  embed.py  impl.py  message.py  node.py  update.py
mol_gnn/nn/message_passing/_old/: agg.py  edge.py  embed.py  impl.py  multi.py  update.py
mol_gnn/nn/pool/: topk.py
mol_gnn/nn/utils/: __init__.py  activation.py
mol_gnn/transforms/: __init__.py  _reaction.py  atom.py  base.py  bond.py  chem.py  conf.py  graph.py  managed.py  mol.py  molecule.py
mol_gnn/transforms/utils/: index_map.py  inverse_index.py
mol_gnn/utils/: __init__.py  chem.py  hparams.py  mixins.py  registry.py  utils.py
molgnn/: exceptions.py
molgnn/featurizers/molgraph/: molecule.py
molgnn/nn/: metrics.py
molgnn/nn/message_passing/: base.py  multi.py
molgnn/utils/: utils.py
notorch/: __main__.py  conf.py  exceptions.py  schedulers.py  types.py
notorch/cli/: train.py
notorch/cli/utils/: build_transform_config.py  instantiate.py  utils.py
notorch/data/: dataset.py  managers.py
notorch/data/models/: graph.py  gvp.py  point_cloud.py
notorch/databases/: base.py  hdf5.py  np.py  sdf.py
notorch/lightning_models/: __init__.py  model.py  multi.py
notorch/nn/: __init__.py  functional.py  loss.py  metrics.py  mlp.py  ops.py  rbf.py  residual.py  schnet.py  transforms.py  utils.py  weighted.py
notorch/nn/gnn/: agg.py  attention.py  chemprop.py  embed.py
notorch/nn/loss/: __init__.py  loss.py  rnc.py
notorch/nn/moe/: moe.py  routers.py
notorch/nn/spatial/: agg.py  embed.py  gvp.py  pointwise.py  schnet.py
notorch/nn/spatial/gvp/: conv.py  gvp.py  layers.py
notorch/nn/spatial/painn/: geb.py
notorch/transforms/: __init__.py  _reaction.py  atom.py  base.py  bond.py  chem.py  graph.py  mol.py
notorch/transforms/utils/: inverse_index.py
notorch/utils/: mixins.py  utils.py
tests/: conftest.py
tests/data/: multi.csv  rxns.csv
tests/integration/: test_regression.py  test_regression_rxn.py
