[project]
name = "mol_gnn"
description = "Molecular GNN toolkit"
version = "0.0.1"
authors = [
    {name = "David Graff"},
]
readme = "README.md"
license = {text = "MIT"}
classifiers = [
	"Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]
keywords = [
    "chemistry",
    "machine learning",
    "property prediction",
    "message passing neural network",
    "graph neural network"
]
requires-python = ">=3.12"
dependencies = [
    "jaxtyping>=0.2.36",
    "lightning>=2.4.0",
    "numpy>=2.0",
    "pandas>=2.0",
    "rdkit>=2024.3.6",
    "scikit-learn>=1.5.2",
    "scipy>=1.14.1",
    "torch-scatter",
    "torch>=2.5.0",
]

[dependency-groups]
dev = [
    "black>=24.10.0",
    "flake8>=7.1.1",
    "pytest>=8.3.3",
    "pytest-cov>=6.0.0",
    "ruff>=0.8.0",
]

[tool.uv.sources]
torch-scatter = { url = "https://data.pyg.org/whl/torch-2.5.0%2Bcpu/torch_scatter-2.1.2-cp312-cp312-macosx_10_13_universal2.whl", marker = "sys_platform == 'darwin'" }

[tool.black]
line-length = 100
target-version = ["py312"]
skip-magic-trailing-comma = true

[tool.ruff]
line-length = 100

[tool.ruff.lint]
ignore = ["E741", "F403", "F405", "F722", "F821"]
exclude = ["**/_old/*.py", "**/_*.py"]

[tool.ruff.lint.extend-per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.format]

[tool.pytest.ini_options]
addopts = "--cov mol_gnn"
markers = [
    "long: marks tests as long (deselect with '-m \"not long\"')",
]
